# nchdf4

./: CMakeInstallation.cmake  CMakeLists.txt  COPYING  LICENSE  Makefile.am  Makefile.in  README.md  UNIDATA.TXT  aclocal.m4  cf  cf.cmake  configure  configure.ac  h4config.h.cmake.in  h4config.h.in  libhdf4.settings.in  ltmain.sh  tr.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
config/: commence.am  conclude.am
hdf/: CMakeLists.txt  Makefile.am  Makefile.in
hdf/src/: CMakeLists.txt  H4api_adpt.h  Makefile.am  Makefile.in  atom.c  atom.h  bitvect.c  bitvect.h  cdeflate.c  cdeflate.h  cnbit.c  cnbit.h  cnone.c  cnone.h  crle.c  crle.h  cskphuff.c  cskphuff.h  cszip.c  cszip.h  df.h  df24.c  dfan.c  dfcomp.c  dfconv.c  dfgr.c  dfgroup.c  dfi.h  dfimcomp.c  dfjpeg.c  dfknat.c  dfkswap.c  dfp.c  dfr8.c  dfrle.c  dfsd.c  dfsd.h  dfstubs.c  dfufp2i.c  dfufp2i.h  (+51 more)
hdf/test/: CMakeLists.txt  Makefile.am  buffer  fortest.c  mgr.c  rig.c  tattdatainfo.c  testhdf  testhdf.c  tproto.h  tszip.c  tusejpegfuncs.c  tutils.c  tutils.h  tvnameclass.c  tvset.c
hdf/util/: CMakeLists.txt  Makefile.am  Makefile.in  fp2hdf.c  gif2hdf  gif2hdf.c  gif2mem.c  h4cc  hdf24to8  hdf2gif  hdf2gif.c  hdf2jpeg  hdf8to24  hdfcomp  hdfed  hdfgifwr.c  hdfls  hdfpack  hdftopal  hdftor8  hdfunpac  he.h  he_file.c  he_main.c  jpeg2hdf  paltohdf  r8tohdf  ristosds  vmake  vshow  writehdf.c
man/: Makefile.am  Makefile.in
mfhdf/: CMakeLists.txt  Makefile.am  Makefile.in
mfhdf/dumper/: CMakeLists.txt  Makefile.am  Makefile.in  hdp  hdp_gr.c  hdp_list.c  hdp_sds.c  hdp_util.c  hdp_vd.c  hdp_vg.c  testhdp.sh  testhdp.sh.in
mfhdf/hdfimport/: CMakeLists.txt  Makefile.am  Makefile.in  hdfimport  hdfimport.c
mfhdf/hdiff/: CMakeLists.txt  Makefile.am  Makefile.in  XGetopt.c  XGetopt.h  hdiff  hdiff.c  hdiff.h  hdiff_main.c  hdiff_misc.c
mfhdf/hrepack/: CMakeLists.txt  Makefile.am  Makefile.in  hrepack  hrepack.h  hrepack.sh  hrepack_check  hrepack_dim.c  hrepack_gr.c  hrepack_list.c  hrepack_parse.c  hrepack_sds.c  hrepack_utils.c  hrepacktst.c  hrepacktst1.hdf  hrepacktst2.hdf  hrepacktst3.hdf  test_hrepack
mfhdf/libsrc/: CMakeLists.txt  Makefile.am  Makefile.in  alloc.h  array.c  attr.c  cdf.c  dim.c  error.c  file.c  globdef.c  hdf2netcdf.h  hdfsds.c  local_nc.h  mfdatainfo.c  mfhdf.h  mfsd.c  nssdc.c  putget.c  putgetg.c  string.c  types.h  var.c  xdr.c  xdr.h  xdrfloat.c  xdrposix.c  xdrstdio.c
mfhdf/test/: CMakeLists.txt  Makefile.am  SDSlongname.hdf  Unlim_dim.hdf  Unlim_inloop.hdf  attdatainfo.hdf  b150.hdf  bug376.hdf  cdftest.c  chknbit.hdf  chktst.hdf  comptst1.hdf  comptst2.hdf  comptst3.hdf  comptst4.hdf  comptst5.hdf  comptst6.hdf  comptst7.hdf  datainfo_chk.hdf  datainfo_chkcmp.hdf  datainfo_cmp.hdf  datainfo_extend.hdf  datainfo_nodata.hdf  datainfo_simple.hdf  datasizes.hdf  dim.hdf  emptySDSs.hdf  exttst.hdf  gen_sds_szipped.c  hdffile.hdf  hdftest.c  hdftest.h  idtypes.hdf  multidimmixed.hdf  nbit.hdf  onedimmultivars.hdf  scaletst.hdf  sds1_dim1_samename.hdf  sds2_dim1_samename.hdf  sds_compressed.hdf  (+29 more)
mfhdf/util/: getopt.c
mfhdf/xdr/: CMakeLists.txt  Makefile.am  Makefile.in  types.h  xdr.c  xdr.h  xdrstdio.c
