cmake_minimum_required (VERSION 2.8.11)
project (nchdf4)

INCLUDE (CheckIncludeFiles)
# Overkill
CHECK_INCLUDE_FILES("unistd.h"  HAVE_UNISTD_H)
CHECK_INCLUDE_FILES("alloca.h"  HAVE_ALLOCA_H)
CHECK_INCLUDE_FILES("malloc.h"    HAVE_MALLOC_H)
CHECK_INCLUDE_FILES("ctype.h"   HAVE_CTYPE_H)
CHECK_INCLUDE_FILES("dirent.h"  HAVE_DIRENT_H)
CHECK_INCLUDE_FILES("dlfcn.h"   HAVE_DLFCN_H)
CHECK_INCLUDE_FILES("errno.h"   HAVE_ERRNO_H)
CHECK_INCLUDE_FILES("fcntl.h"   HAVE_FCNTL_H)
CHECK_INCLUDE_FILES("getopt.h"  HAVE_GETOPT_H)
CHECK_INCLUDE_FILES("stdbool.h"   HAVE_STDBOOL_H)
CHECK_INCLUDE_FILES("locale.h"  HAVE_LOCALE_H)
CHECK_INCLUDE_FILES("stdint.h"  HAVE_STDINT_H)
CHECK_INCLUDE_FILES("stdio.h"   HAVE_STDIO_H)
CHECK_INCLUDE_FILES("io.h"      HAVE_IO_H)
CHECK_INCLUDE_FILES("stdlib.h"  HAVE_STDLIB_H)
CHECK_INCLUDE_FILES("stdarg.h"    HAVE_STDARG_H)
CHECK_INCLUDE_FILES("strings.h"   HAVE_STRINGS_H)
CHECK_INCLUDE_FILES("signal.h"    HAVE_SIGNAL_H)
CHECK_INCLUDE_FILES("sys/dir.h"   HAVE_SYS_DIR_H)
CHECK_INCLUDE_FILES("sys/ndir.h"  HAVE_SYS_NDIR_H)
CHECK_INCLUDE_FILES("sys/param.h" HAVE_SYS_PARAM_H)
CHECK_INCLUDE_FILES("sys/stat.h"  HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES("sys/time.h"  HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILES("sys/types.h" HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES("sys/wait.h"  HAVE_SYS_WAIT_H)
CHECK_INCLUDE_FILES("sys/mman.h"  HAVE_SYS_MMAN_H)
CHECK_INCLUDE_FILES("sys/resource.h" HAVE_SYS_RESOURCE_H)
CHECK_INCLUDE_FILES("fcntl.h"  HAVE_FCNTL_H)
CHECK_INCLUDE_FILES("inttypes.h"  HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES("pstdint.h"  HAVE_PSTDINT_H)
CHECK_INCLUDE_FILES("endian.h" HAVE_ENDIAN_H)
CHECK_INCLUDE_FILES("BaseTsd.h"  HAVE_BASETSD_H)
CHECK_INCLUDE_FILES("stddef.h"   HAVE_STDDEF_H)
CHECK_INCLUDE_FILES("memory.h"  HAVE_MEMORY_H)
CHECK_INCLUDE_FILES("string.h"  HAVE_STRING_H)
CHECK_INCLUDE_FILES("winsock2.h" HAVE_WINSOCK2_H)
CHECK_INCLUDE_FILES("ftw.h"  HAVE_FTW_H)

# Check for ZLib
FIND_PACKAGE(ZLIB)
IF(NOT ZLIB_LIBRARY)
    MESSAGE(FATAL_ERROR "HDF5 Support specified, cannot find ZLib.")
ENDIF()
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})

# Create h4config.h file.
configure_file("${nchdf4_SOURCE_DIR}/h4config.h.in"
  "${nchdf4_BINARY_DIR}/h4config.h")
ADD_DEFINITIONS(-DHAVE_CONFIG_H)

add_subdirectory(hdf)
add_subdirectory(mfhdf)
add_subdirectory(man)

