
#############################################################################
##                      Subdirectories to build in                         ##
#############################################################################

ACLOCAL_AMFLAGS = -Iconf -Iconfig

include $(top_srcdir)/config/commence.am

SUBDIRS = hdf mfhdf man

EXTRA_DIST = 
DISTCLEANFILE =


# install .settings in lib directory.
settingsdir=$(libdir)
settings_DATA=libhdf4.settings

