# Create a number of executables

add_executable(gif2hdf gif2hdf.c gif2mem.c gifread.c decompress.c writehdf.c)
add_executable(hdf2gif hdf2gif.c hdfgifwr.c)
add_executable(hdf2jpeg hdf2jpeg.c)
add_executable(hdf24to8 hdf24to8.c)
add_executable(hdf8to24 hdf8to24.c)
add_executable(hdfcomp hdfcomp.c)
add_executable(hdfed he_cntrl.c he_disp.c he_file.c he_main.c)
add_executable(hdfls hdfls.c)
add_executable(hdfpack hdfpack.c)
add_executable(hdftopal hdftopal.c)
add_executable(hdftor8 hdftor8.c)
add_executable(hdfunpac hdfunpac.c)
add_executable(jpeg2hdf jpeg2hdf.c)
add_executable(paltohdf paltohdf.c)
add_executable(r8tohdf r8tohdf.c)
add_executable(ristosds ristosds.c)
add_executable(vmake vmake.c)
add_executable(vshow vshow.c)

target_link_libraries(gif2hdf libdf)
target_link_libraries(hdf2gif libdf)
target_link_libraries(hdf2jpeg libdf)
target_link_libraries(hdf24to8 libdf)
target_link_libraries(hdf8to24 libdf)
target_link_libraries(hdfcomp libdf)
target_link_libraries(hdfed libdf)
target_link_libraries(hdfls libdf)
target_link_libraries(hdfpack libdf)
target_link_libraries(hdftopal libdf)
target_link_libraries(hdftor8 libdf)
target_link_libraries(hdfunpac libdf)
target_link_libraries(jpeg2hdf libdf)
target_link_libraries(paltohdf libdf)
target_link_libraries(r8tohdf libdf)
target_link_libraries(ristosds libdf)
target_link_libraries(vmake libdf)
target_link_libraries(vshow libdf)
