# Create a number of executables

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/hdf/src)

add_executable(gif2hdf gif2hdf.c gif2mem.c gifread.c decompress.c writehdf.c $<TARGET_OBJECTS:df>)
add_executable(hdf2gif hdf2gif.c hdfgifwr.c $<TARGET_OBJECTS:df>)
add_executable(hdf2jpeg hdf2jpeg.c $<TARGET_OBJECTS:df>)
add_executable(hdf24to8 hdf24to8.c $<TARGET_OBJECTS:df>)
add_executable(hdf8to24 hdf8to24.c $<TARGET_OBJECTS:df>)
add_executable(hdfcomp hdfcomp.c $<TARGET_OBJECTS:df>)
add_executable(hdfed he_cntrl.c he_disp.c he_file.c he_main.c $<TARGET_OBJECTS:df>)
add_executable(hdfls hdfls.c $<TARGET_OBJECTS:df>)
add_executable(hdfpack hdfpack.c $<TARGET_OBJECTS:df>)
add_executable(hdftopal hdftopal.c $<TARGET_OBJECTS:df>)
add_executable(hdftor8 hdftor8.c $<TARGET_OBJECTS:df>)
add_executable(hdfunpac hdfunpac.c $<TARGET_OBJECTS:df>)
add_executable(jpeg2hdf jpeg2hdf.c $<TARGET_OBJECTS:df>)
add_executable(paltohdf paltohdf.c $<TARGET_OBJECTS:df>)
add_executable(r8tohdf r8tohdf.c $<TARGET_OBJECTS:df>)
add_executable(ristosds ristosds.c $<TARGET_OBJECTS:df>)
add_executable(vmake vmake.c $<TARGET_OBJECTS:df>)
add_executable(vshow vshow.c $<TARGET_OBJECTS:df>)

target_link_libraries(gif2hdf ${LINK_LIBS})
target_link_libraries(hdf2gif ${LINK_LIBS})
target_link_libraries(hdf2jpeg ${LINK_LIBS})
target_link_libraries(hdf24to8 ${LINK_LIBS})
target_link_libraries(hdf8to24 ${LINK_LIBS})
target_link_libraries(hdfcomp ${LINK_LIBS})
target_link_libraries(hdfed ${LINK_LIBS})
target_link_libraries(hdfls ${LINK_LIBS})
target_link_libraries(hdfpack ${LINK_LIBS})
target_link_libraries(hdftopal ${LINK_LIBS})
target_link_libraries(hdftor8 ${LINK_LIBS})
target_link_libraries(hdfunpac ${LINK_LIBS})
target_link_libraries(jpeg2hdf ${LINK_LIBS})
target_link_libraries(paltohdf ${LINK_LIBS})
target_link_libraries(r8tohdf ${LINK_LIBS})
target_link_libraries(ristosds ${LINK_LIBS})
target_link_libraries(vmake ${LINK_LIBS})
target_link_libraries(vshow ${LINK_LIBS})
